--- a/index.html
+++ b/index.html
@@ -9,15 +9,50 @@
     html, body {
       height: 100%;
       margin: 0;
+      font-family: Arial, sans-serif;
+      background-color: #fefefe;
+    }
+    header {
+      background-color: #4CAF50;
+      color: white;
+      padding: 15px;
+      text-align: center;
+      font-size: 1.5rem;
+    }
+    section.intro {
+      padding: 20px;
+      background-color: #f2f2f2;
+      text-align: center;
     }
     iframe {
       border: none;
       display: block;
     }
+    footer {
+      background-color: #333;
+      color: white;
+      text-align: center;
+      padding: 10px;
+      font-size: 0.9rem;
+    }
   </style>
 </head>
 <body> 
-  <iframe src="nav.html" height="20%" width="100%"></iframe>
-  <iframe src="home.html" height="80%" width="100%" name="content"></iframe>
+
+  <header>
+    🐾 Welcome to the Pet Care Guide 🐾
+  </header>
+
+  <section class="intro">
+    <p>We help you take better care of your furry, feathered, or scaly friends! Browse through our guide to find tips on nutrition, grooming, training, and health care for all types of pets.</p>
+  </section>
+
+  <iframe src="nav.html" height="60" width="100%"></iframe>
+  <iframe src="home.html" height="500" width="100%" name="content"></iframe>
+
+  <footer>
+    &copy; 2025 PetCareGuide.com | Designed with love for pet lovers
+  </footer>
+
 </body>
 </html>
