--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pet Care Guide</title>
-  <link rel="icon" type="image/jpeg" href="peticon.jpg">
+  <link rel="icon" type="image/jpeg" href="peticon.jpg" />
   <style>
     html, body {
       height: 100%;
@@ -17,11 +17,11 @@
       color: white;
       padding: 15px;
       text-align: center;
-      font-size: 1.5rem;
+      font-size: 1.8rem;
     }
     section.intro {
       padding: 20px;
-      background-color: #f2f2f2;
+      background-color: #f9f9f9;
       text-align: center;
     }
     iframe {
@@ -37,21 +37,24 @@
     }
   </style>
 </head>
-<body> 
+<body>
 
   <header>
     🐾 Welcome to the Pet Care Guide 🐾
   </header>
 
   <section class="intro">
-    <p>We help you take better care of your furry, feathered, or scaly friends! Browse through our guide to find tips on nutrition, grooming, training, and health care for all types of pets.</p>
+    <p>Explore essential tips for keeping your pets healthy and happy. Learn about grooming, nutrition, training, and more!</p>
   </section>
 
+  <!-- Navigation bar -->
   <iframe src="nav.html" height="60" width="100%"></iframe>
+
+  <!-- Main content area -->
   <iframe src="home.html" height="500" width="100%" name="content"></iframe>
 
   <footer>
-    &copy; 2025 PetCareGuide.com | Designed with love for pet lovers
+    &copy; 2025 PetCareGuide.com | Built with ❤️ for animal lovers
   </footer>
 
 </body>
