--- a/Home.html
+++ b/Home.html
@@ -1,22 +1,44 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <title>Pet Care Basics</title>
+  <style>
+    body {
+      background-color: honeydew;
+      font-family: Arial, sans-serif;
+    }
+    h1 {
+      text-align: center;
+    }
+    ul {
+      font-size: 1.2rem;
+    }
+    .images {
+      text-align: center;
+      margin-top: 20px;
+    }
+    .images img {
+      margin: 10px;
+      height: 200px;
+      width: 300px;
+      border-radius: 10px;
+    }
+  </style>
 </head>
-<body style="background-color: honeydew;">
-  <h1 align="center">🐾 Pet Care Basics</h1>
+<body>
+  <h1>🐾 Pet Care Basics</h1>
   <hr>
-  <font size="5">
-    <ul>
-      <li><b>Dog Care:</b> Regular walks, training, grooming, and affection.</li>
-      <li><b>Cat Care:</b> Clean litter box, mental stimulation, and calm environment.</li>
-      <li><b>Bird Care:</b> Clean cages, healthy seeds/fruits, fresh water.</li>
-    </ul>
-  </font>
-  <center>
-    <img src="https://i.pinimg.com/736x/08/5f/e1/085fe1fcd1bd49263db6510bb259cbad.jpg" height="200" width="300"> &nbsp;
-    <img src="https://img.freepik.com/free-photo/beautiful-shot-white-british-shorthair-kitten_181624-57681.jpg?semt=ais_hybrid&w=740" height="200" width="300"> &nbsp;
-    <img src="https://wallpapers.com/images/hd/cute-bird-pictures-h6mz3ghdofpsxhrf.jpg" height="200" width="300">
-  </center>
+  <ul>
+    <li><b>Dog Care:</b> Regular walks, training, grooming, and affection.</li>
+    <li><b>Cat Care:</b> Clean litter box, mental stimulation, and calm environment.</li>
+    <li><b>Bird Care:</b> Clean cages, healthy seeds/fruits, fresh water.</li>
+  </ul>
+
+  <div class="images">
+    <img src="https://i.pinimg.com/736x/08/5f/e1/085fe1fcd1bd49263db6510bb259cbad.jpg" alt="Dog">
+    <img src="https://img.freepik.com/free-photo/beautiful-shot-white-british-shorthair-kitten_181624-57681.jpg?semt=ais_hybrid&w=740" alt="Cat">
+    <img src="https://wallpapers.com/images/hd/cute-bird-pictures-h6mz3ghdofpsxhrf.jpg" alt="Bird">
+  </div>
 </body>
 </html>
